--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,54 +42,11 @@
 
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
 </head>
 <body>
 
-<header>
-
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-                <strong>Album</strong>
-            </a>
-
-            <!--로그인 모달-->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">로그인</button>
-
-
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">LOGIN</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-
-                        <div class="modal_main">
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="user_id" placeholder="ID">
-                                <label for="user_id">ID</label>
-                            </div>
-                            <div class="form-floating">
-                                <input type="password" class="form-control" id="user_pw" placeholder="Password">
-                                <label for="user_pw">Password</label>
-                            </div>
-
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
-                            <button type="button" class="btn btn-primary" id="login">login</button>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            </div>
-        </div>
-    </div>
-</header>
+<header th:insert="~{template/header :: mainbar}"></header>
 
 <main>
 
@@ -270,39 +227,10 @@
             <a href="#">Back to top</a>
         </p>
         <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.1/getting-started/introduction/">getting started guide</a>.</p>
+        <p class="mb-0">New to Bootstrap? <a href="/static">Visit the homepage</a> or read our <a href="/docs/5.1/getting-started/introduction/">getting started guide</a>.</p>
     </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script>
-
-    $('#login').click(function (){
-
-        if ($('#user_id').val() ==""){
-            alert("아이디를 입력하세요");
-            return;
-        }
-        if ($('#user_pw').val() ==""){
-            alert("비밀번호를 입력하세요");
-            return ;
-        }
-        $.ajax({
-            url:"/user/idcheck",
-            dataType:String.class,
-            type:'POST',
-            data:{'user_id':$('#user_id').val(),'user_pw':$('#user_pw').val()},
-            success:function (data){
-                alert(data);
-
-            },
-            error:function (request,status,error){
-                alert("code:"+request.status+"\n"+"message :"+request.responseText+"\n"+"error:"+error);
-            }
-
-        });
-    })
-
-</script>
 </body>
 </html>
