--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -158,8 +158,8 @@
                         <div class="col-md-2 mb-6">
                             <label for="user_sex">성별</label>
                             <select class="form-select" id="user_sex" th:field="*{user_sex}" aria-label="Default select example">
-                            <option value="1">남성</option>
-                            <option value="2">여성</option>
+                            <option value="남성">남성</option>
+                            <option value="여성">여성</option>
                         </select>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                         <label class="custom-control-label" for="aggrement">개인정보 수집 및 이용에 동의합니다.</label>
                     </div>
                     <div class="mb-4"></div>
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">가입 완료</button>
+                    <button class="btn btn-primary btn-lg btn-block" type="submit" id="submit" disabled>가입 완료</button>
                 </form>
             </div>
         </div>
@@ -208,11 +208,15 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script>
-    var idResult=false;
+<script th:inline="javascript">
 
     $(function (){
         $("#idCheck").click(function (){
+            if($('#user_id').val()==""){
+
+                alert("필수 입력값입니다");
+                return;
+            }
             $.ajax({
                 url:"/user/idCheck",
                 dataType:String.class,
@@ -220,8 +224,14 @@
                 data:{'user_id':$('#user_id').val()},
                 success:function(data){
                     if(data=="ok"){
-                        alert("사용가능한 아이디 입니다")
+                        $('#submit').removeProp('disabled');
+                        $('#submit').prop('disabled',false);
+                        alert("사용가능한 아이디 입니다");
                     }
+                    else{
+                        alert("사용할 수 없는 아이디 입니다");
+                    }
+
                 },
                 error:function (data){
                     alert("error" + data);
@@ -229,14 +239,8 @@
             })
         })
     })
-
-    $(function (){
-        $('#user_pw2').change(function (){
-            alert("변경");
-            if($('#user_pw').val() != $('#user_pw2').val()){
-                alert("다르다");
-            }
-        })
+    $('#user_id').keyup(function (){
+        $('#submit').prop('disabled',true);
     })
 
     $(document).on("keyup", "#user_phone", function() {
