로그인 폼 재설정, pw 찾기 장바구니 html 디자인 commit

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,6 +38,25 @@
                 font-size: 3.5rem;
             }
         }
+        /*header {
+            position: fixed;
+            top: 0;
+             width: 100% ;
+            left: 0;
+            right: 0;
+
+            !* 생략 *!
+        }*/
+        main {
+            padding-top: 90px;
+            /* 생략 */
+        }
+        /*.modal fade{
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }*/
     </style>
 
 
