--- a/src/main/resources/templates/user/findForm.html
+++ b/src/main/resources/templates/user/findForm.html
@@ -76,6 +76,10 @@
             border-color: #dc3545;
             color: #dc3545;
         }
+
+        .message_div{
+            padding-bottom: 3px;
+        }
     </style>
 
 
@@ -90,40 +94,52 @@
 
 
 
-    <!--    <section class="py-5 text-center container">
-            <div class="row py-lg-5">
-                <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Album example</h1>
-                    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-                    <p>
-                        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-                    </p>
-                </div>
+<!--    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">Album example</h1>
+                <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                <p>
+                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
+                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+                </p>
             </div>
-        </section>-->
+        </div>
+    </section>-->
 
 
 
 <div class="container">
     <div class="input-form-backgroud row" >
+        <h3>
+            <a href="/" class="navbar-brand d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                     viewBox="0 0 24 24">
+                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
+                    <circle cx="12" cy="13" r="4"/>
+                </svg>
+                <strong>Album</strong>
+            </a>
+        </h3>
         <div class="input-form col-md-12 mx-auto">
             <h4 class="mb-3">본인 인증</h4>
-            <form class="validation-form" action="/user/joinForm" method="post" novalidate>
-                    <div class="col-md-6 mb-3">
-                        <label for="user_phone">전화번호</label>
-                        <input type="text" class="form-control" id="user_phone" name="user_phone" required>
-                        <label for="getNum_button"></label>
-                        <button TYPE="button" class="btn btn-primary" id="getNum_button">인증번호 받기</button>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="cer_number">인증번호</label>
-                        <input type="text" class="form-control" id="cer_number" required>
-                        <label for="cer_button"></label>
-                        <button type="button" class="btn btn-primary" id="cer_button">인증하기</button>
-                    </div>
+            <form class="validation-form" action="/user/passwordForm" method="post" novalidate>
+                <div class="col-md-6 mb-3">
+                    <div class="message_div">가입하신 전화번호로 번호를 보내드립니다</div>
+                    <label for="user_id">아이디</label>
+                    <input type="text" class="form-control" id="user_id" name="user_id" required>
+                    <label for="getNum_button"></label>
+                    <button TYPE="button" class="btn btn-primary" id="getNum_button">인증번호 받기</button>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="cer_number">인증번호</label>
+                    <input type="text" class="form-control" id="cer_number" required>
+                    <label for="cer_button"></label>
+                    <button type="button" class="btn btn-primary" id="cer_button">인증하기</button>
+                </div>
                 <div class="mb-4"></div>
-                    <button class="btn btn-primary btn-lg btn-block" type="submit" id="submit" disabled>가입하기</button>
+                <button class="btn btn-primary btn-lg btn-block" type="submit" id="submit" disabled>계속하기</button>
             </form>
         </div>
     </div>
@@ -148,7 +164,7 @@
         $('#cer_button').click(function (){
             if(cer_num==$('#cer_number').val()){
                 alert("인증 완료 되었습니다");
-                /*$('#user_phone').prop('disabled',true);*/
+                $('#user_id').prop('readonly',true);
                 $('#submit').prop('disabled',false);
 
             }
@@ -164,8 +180,13 @@
                 url:"/user/sendMessage",
                 dataType:String.class,
                 type:"GET",
-                data:{'user_phone':$('#user_phone').val()},
+                data:{'user_id':$('#user_id').val()},
                 success:function (data){
+                    if(data=="x"){
+                        alert("존재하지 않는 아이디입니다");
+                        return ;
+                    }
+
                     cer_num=data;
                     alert("인증번호가 발송되었습니다")
                 },
@@ -176,9 +197,7 @@
         })
     })
 
-    $(document).on("keyup", "#user_phone", function() {
-        $(this).val( $(this).val().replace(/[^0-9]/g, "").replace(/(^02|^0505|^1[0-9]{3}|^0[0-9]{2})([0-9]+)?([0-9]{4})$/,"$1-$2-$3").replace("--", "-") );
-    });
+
 
 </script>
 </body>
