--- a/src/main/resources/templates/template/header.html
+++ b/src/main/resources/templates/template/header.html
@@ -66,14 +66,17 @@
             })
         </script>
         <style>
-            header {
+            .headerBody {
                 position: fixed;
                 top: 0;
                 width: 100%;
                 left: 0;
                 right: 0;
+                margin-bottom: 100px;
+
             }
-            a{
+
+            a {
                 color: white;
                 text-decoration: none;
             }
@@ -82,7 +85,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -94,13 +99,16 @@
                         <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
@@ -117,62 +125,68 @@
     </nav>
 </div>
 
-<div class="bodyHeader"  th:fragment="user_mainbar">
-<div class="navbar navbar-dark bg-dark shadow-sm" >
-    <div class="container">
-        <a href="/" class="navbar-brand d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                 viewBox="0 0 24 24">
-                <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
-                <circle cx="12" cy="13" r="4"/>
-            </svg>
-            <strong>Album</strong>
-        </a>
-        <ul class="nav justify-content-center">
+<div class="bodyHeader" th:fragment="user_mainbar">
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <a href="/" class="navbar-brand d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                     viewBox="0 0 24 24">
+                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
+                    <circle cx="12" cy="13" r="4"/>
+                </svg>
+                <strong>Album</strong>
+            </a>
+            <ul class="nav justify-content-center">
 
-            <li class="nav-item">
-                <a class="nav-link active" href="/user/logout">로그아웃</a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/user/logout">로그아웃</a>
 
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="/mypage/basket">장바구니</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="#">마이페이지</a>
-            </li>
-        </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/mypage/basket">장바구니</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/mypage/account">마이페이지</a>
+                </li>
+            </ul>
 
 
-    </div>
+        </div>
 
-    <script th:inline="javascript">
-        $(function () {
-            $('#logout').click(function () {
-                location.href = "user/logout";
+        <script th:inline="javascript">
+            $(function () {
+                $('#logout').click(function () {
+                    location.href = "user/logout";
+                })
             })
-        })
 
-    </script>
-    <style>
-        header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            left: 0;
-            right: 0;
-        }
-        a{
-            color: white;
-            text-decoration: none;
-        }
+        </script>
+        <style>
+            .bodyHeader {
+                position: fixed;
+                top: 0;
+                width: 100%;
+                left: 0;
+                right: 0;
+                margin-bottom: 100px;
 
-    </style>
-</div>
+
+            }
+
+            a {
+                color: white;
+                text-decoration: none;
+            }
+
+        </style>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -184,13 +198,16 @@
                         <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
