--- a/src/main/resources/templates/mypage/detailEnquiry.html
+++ b/src/main/resources/templates/mypage/detailEnquiry.html
@@ -24,8 +24,7 @@
     </style>
 </head>
 <body>
-<header th:if="${session.isEmpty()}" th:insert="~{template/header :: no_user_mainbar}"></header>
-<header th:unless="${session.isEmpty()}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:insert="~{template/header :: user_mainbar}"></header>
 
 <main>
     <div class="row">
@@ -37,13 +36,13 @@
             <h2> 문의 사항</h2>
 
             <div class="input-form col-md-12 mx-auto">
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="enquiry_title" class="form-label">제목</label>
                     <input type="text" class="form-control" id="enquiry_title" name="enquiry_title"
-                           th:text="${enquiry.enquiry_title}" readonly>
+                           th:value="${enquiry.enquiry_title}" readonly>
                     <label for="enquiry_qdate" class="form-label">문의 날짜</label>
                     <input type="text" class="form-control" id="enquiry_qdate" name="enquiry_qdate"
-                           th:text="${enquiry.enquiry_qdate}" readonly>
+                           th:value="${enquiry.enquiry_qdate}" readonly>
                 </div>
                 <div class="mb-3">
                     <label for="enquiry_question" class="form-label">문의 내용</label>
@@ -51,12 +50,12 @@
                               readonly></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="enquiry_answer" class="form-label" >문의 내용</label>
+                    <label for="enquiry_answer" class="form-label" >답변</label>
                     <textarea class="form-control" id="enquiry_answer" name="enquiry_answer" th:text="${enquiry.enquiry_answer}" rows="6" readonly></textarea>
                 </div>
                 <div class="mb-1">
                     <label for="enquiry_adate" class="form-label" >답변 날짜</label>
-                    <input type="text" id="enquiry_adate" name="enquiry_adate" th:text="${enquiry.enquiry_adate}">
+                    <input type="text" class="from-control" id="enquiry_adate" name="enquiry_adate" th:value="${enquiry.enquiry_adate}">
                 </div>
             </div>
         </div>
