--- a/src/main/resources/templates/template/header.html
+++ b/src/main/resources/templates/template/header.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+<!--비회원 메인 바-->
 <div class="headerBody" th:fragment="no_user_mainbar">
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
@@ -19,8 +20,6 @@
                 <strong>Album</strong>
             </a>
             <a href="/user/login">로그인</a>
-            <!--로그인 모달-->
-
 
         </div>
 
@@ -73,6 +72,7 @@
                 left: 0;
                 right: 0;
                 margin-bottom: 100px;
+                z-index: 100;
 
             }
 
@@ -82,49 +82,11 @@
             }
         </style>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" th:insert="template/nav_bar :: navbar">
     </nav>
 </div>
 
+<!--회원 메인바-->
 <div class="bodyHeader" th:fragment="user_mainbar">
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
@@ -170,6 +132,7 @@
                 left: 0;
                 right: 0;
                 margin-bottom: 100px;
+                z-index: 100;
 
 
             }
@@ -181,47 +144,45 @@
 
         </style>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" th:insert="template/nav_bar :: navbar">
+    </nav>
+</div>
+
+
+<div class="headerBody" th:fragment="admin_mainbar">
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <a href="/" class="navbar-brand d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                     viewBox="0 0 24 24">
+                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
+                    <circle cx="12" cy="13" r="4"/>
+                </svg>
+                <strong>Album</strong>
+            </a>
+            <div>
+            <a href="/admin/enquiryList">페이지 관리</a>
+            <a href="/user/logout">로그아웃</a>
             </div>
         </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" th:insert="template/nav_bar :: navbar">
     </nav>
+
+    <style>
+        .headerBody{
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin-bottom: 100px;
+            z-index: 100;
+        }
+        a{
+            padding-right: 10px;
+        }
+    </style>
 </div>
 </body>
 </html>
