--- a/src/main/resources/templates/mypage/account.html
+++ b/src/main/resources/templates/mypage/account.html
@@ -16,8 +16,7 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
-<header th:if="${session.isEmpty()}" th:insert="~{template/header :: no_user_mainbar}"></header>
-<header th:unless="${session.isEmpty()}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:insert="~{template/header :: user_mainbar}"></header>
 
 <main>
     <div class="row">
