--- a/src/main/resources/templates/mypage/basket.html
+++ b/src/main/resources/templates/mypage/basket.html
@@ -20,8 +20,7 @@
     </style>
 </head>
 <body>
-<header th:if="${session.isEmpty()}" th:insert="~{template/header :: no_user_mainbar}"></header>
-<header th:unless="${session.isEmpty()}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:insert="~{template/header :: user_mainbar}"></header>
 
 <main>
     <div class="row">
@@ -41,7 +40,7 @@
 
                     Featured
                 </div>
-                <div class="card-body">
+                <div class="card-body" th:each="list:${list}">
                     <h5 class="card-title">Special title treatment</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
