--- a/src/main/resources/templates/mypage/enquiryList.html
+++ b/src/main/resources/templates/mypage/enquiryList.html
@@ -19,9 +19,7 @@
     </style>
 </head>
 <body>
-<header th:if="${session.isEmpty()}" th:insert="~{template/header :: no_user_mainbar}"></header>
-<header th:unless="${session.isEmpty()}" th:insert="~{template/header :: user_mainbar}"></header>
-
+<header th:insert="~{template/header :: user_mainbar}"></header>
 <main>
     <div class="row">
         <!--사이드 바-->
@@ -45,7 +43,7 @@
                         <td th:text="${en.enquiry_qdate}">
                         </td>
                         <td th:text="${en.enquiry_title}"></td>
-                        <td th:text="${en.enquiry_status}"></td>
+                        <td th:text="${en.enquiry_adate==null}?'':'완료'"></td>
                         <td>
                             <a th:href="@{/mypage/detailEnquiry(enquiry_code=${en.enquiry_code})}" class="link-dark">보기</a>
                         </td>
